[package]
name = "dinodeck_rs"
version = "0.1.0"
authors = ["yhjang <siabard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7"
tiled="0.9.3"

[dependencies.sdl2]
version="0.35"
features = ["ttf", "image", "gfx", "mixer"]
